(library
 (name Revery_Font)
 (public_name Revery.Font)
 (flags
  (:standard -w -69))
 (preprocess
  (pps lwt_ppx))
 (libraries
  ctypes
  harfbuzz
  lru
  lwt
  lwt.unix
  sdl2
  flex
  rebez.lib
  Revery_Core
  Revery_Math
  Revery_Zed))

(copy_files files/*)

(install
 (section bin)
 (package Revery)
 (files Inconsolata.otf))
